Cart table header alignment & whitespace fix

--- a/src/assets/styles/6.components/global/cart-summary.scss
+++ b/src/assets/styles/6.components/global/cart-summary.scss
@@ -58,7 +58,7 @@
   }
 
   .wholesale-order__shipping-check {
-    margin: 15px 0 30px;
+    margin: 15px auto 30px;
   }
 
   .usp-triple-icons {
