--- a/src/assets/styles/6.components/global/cart-table.scss
+++ b/src/assets/styles/6.components/global/cart-table.scss
@@ -155,6 +155,7 @@
     &-title {
       @include clearfix;
       margin: 0 0 10px;
+      white-space: normal;
     }
 
     &-link {
@@ -162,6 +163,7 @@
       @include Text(16px, 22px, $color-black);
       float: left;
       width: calc(100% - 70px);
+      white-space: normal;
     }
 
     &-price {
@@ -170,6 +172,7 @@
       text-align: right;
       float: left;
       width: 70px;
+      white-space: normal;
     }
 
     &-id {
@@ -178,6 +181,7 @@
       text-decoration: none;
       display: inline-block;
       margin: 0 0 10px;
+      white-space: normal;
     }
 
     &-option {
@@ -185,6 +189,7 @@
       @include Text(11px, 13px, $color-black);
       text-decoration: none;
       margin: 0 20px 10px 0;
+      white-space: normal;
     }
 
     &-remove {
@@ -284,7 +289,7 @@
     }
 
     &__update-wrap {
-      padding: 40px 20px 0;
+      padding: 20px 20px 0;
     }
 
     &__product-id {
